log
Thu 21 Mar 2024 08:22:44 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
6468a3b
Thu 21 Mar 2024 08:25:59 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:15: error: implicit declaration of function ‘firts’; did you mean ‘first’? [-Werror=implicit-function-declaration]
   65 |   int* dato = firts(L);
      |               ^~~~~
      |               first
exercises.c:65:15: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:69:5: error: ‘sumatoria’ undeclared (first use in this function); did you mean ‘sumaria’?
   69 |     sumatoria += *dato;
      |     ^~~~~~~~~
      |     sumaria
exercises.c:69:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:64:7: error: unused variable ‘sumaria’ [-Werror=unused-variable]
   64 |   int sumaria = 0;
      |       ^~~~~~~
exercises.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bedf11c
